# contextengg

./: .env.example  .gitignore  README.md  pyproject.toml
actor_critic/: __init__.py  actor.py  critic.py  graph.py  schemas.py  state.py
api/: main.py  schemas.py
api/routers/: workflow.py
context_engine/: __init__.py  graph.py  merger.py  retriever.py  schemas.py  store.py  versioning.py
core/: config.py  llm_factory.py  logger.py
examples/: run_simple_workflow.py  run_sync_hitl.py  seed_context.py  seed_global_trade.py  simple_context.json
examples/data/: global_trade_seed.json
hitl/: __init__.py  gateway.py  router.py  schemas.py
pipeline/: orchestrator.py
tests/: test_actor_critic.py  test_context_store.py  test_hitl_gateway.py  test_versioning.py
ui/: index.html
