[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextengg"
version = "0.1.0"
description = "Agentic AI — Actor-Critic with Incremental Domain Context & HITL Approval"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # LangChain / LangGraph
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    # Vector store
    "chromadb>=0.5.0",
    # API layer
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    # Data / config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    # Utilities
    "rich>=13.7.0",
    "typer>=0.12.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
]

[project.scripts]
contextengg = "pipeline.orchestrator:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = [
    "core",
    "context_engine",
    "actor_critic",
    "hitl",
    "pipeline",
    "api",
]
